# ariba-new

./: .cursorrules  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  app.py  main.py  manifest.yml  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  swagger (11).json
.agents/skills/mcp-builder/scripts/: connections.py
src/ariba_mcp/: __init__.py  auth.py  client.py  config.py  errors.py  server.py
src/ariba_mcp/models/: __init__.py  common.py
src/ariba_mcp/prompts/: __init__.py  procurement.py  sourcing.py
src/ariba_mcp/tools/: __init__.py  administration.py  analytical_reporting.py  catalogs.py  contract_compliance.py  contracts.py  document_approval.py  operational_procurement.py  operational_sourcing.py  procurement_reporting.py  purchase_orders.py  sourcing.py  sourcing_project.py  supplier_data.py  supplier_management.py  supplier_risk.py  supply_chain.py
src/ariba_mcp/tools/business_network/: __init__.py  _example.py  data_replication_status.py  order_change_requests_for_suppliers.py  planning_collaboration_supplier.py  ship_notice_for_suppliers.py  supplier_information.py
src/ariba_mcp/tools/catalog/: __init__.py  _example.py  asset_management.py  content_lookup.py  internal_catalogs_shop.py  public_catalogs_shop.py
src/ariba_mcp/tools/general/: Integration_monitoring_API.py  __init__.py  _example.py  asset_management.py  public_procurement.py  user_qualification.py
src/ariba_mcp/tools/procurement/: __init__.py  _example.py  audit_search.py  contract_compliance.py  (+5 more)
tests/: conftest.py
(+21 files in other folders)
