[project]
name = "ariba-mcp"
version = "0.1.0"
description = "MCP server for SAP Ariba procurement suite — exposes Purchase Orders, Invoices, Requisitions, Contracts, Suppliers, Receipts, Payments, Sourcing, Catalogs, and Approvals as Claude-compatible tools."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Ariba MCP Team" },
]
dependencies = [
    "fastmcp>=3.1.0",
    "httpx>=0.28.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ariba_mcp"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
